--- a/src/html/coursemanagement_taskadd.html
+++ b/src/html/coursemanagement_taskadd.html
@@ -1456,240 +1456,7 @@
         </div>
         <div class="modal-footer">
           <button type="button" data-dismiss="modal" class="btn btn-default">取消</button>
-          <button type="button" class="btn btn-primary" data-dismiss="modal" data-toggle="modal" data-target="#addText"
-            style="margin-bottom: 5px">添加</button>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div id="addText" tabindex="-1" role="dialog" aria-labelledby="myModalLabelLarge" aria-hidden="true" class="modal fade in"
-    style=" padding-right: 17px;">
-    <div class="modal-dialog modal-lg">
-      <div class="modal-content">
-        <div class="modal-header">
-          <button type="button" data-dismiss="modal" aria-label="Close" class="close">
-            <span aria-hidden="true">×</span>
-          </button>
-          <h4 id="myModalLabelLarge" class="modal-title">选择内容</h4>
-        </div>
-        <div class="modal-body">
-          <div class="xc-table">
-            <div class="xc-table-head">
-              <ul>
-                <li class="col-xs-4">课程阶段</li>
-                <li class="col-xs-4">课程类型</li>
-                <li class="col-xs-4">选择知识点</li>
-              </ul>
-            </div>
-            <div class="xc-table-body big wj-table">
-              <ul class="jq-xc-table" style="height: 232px;">
-                <li class="one active"><span class="text">启蒙课程</span>
-                  <ul class="two">
-                    <li class="active"><span>教材版本教材</span>
-                      <ul class="three ">
-                        <li class="active"><span>第一册（一年级上学期）</span>
-                        </li>
-                        <li><span>第二册（一年级下学期）</span>
-                        </li>
-                        <li><span>第二册（一年级下学期）</span>
-                        </li>
-                        <li><span>第二册（一年级下学期）</span>
-                        </li>
-                      </ul>
-                    </li>
-                    <li><span>教材版本教材</span>
-                      <ul class="three ">
-                        <li class="active">小学Unit 2-1 Part1
-
-                        </li>
-                        <li>小学Unit 2-2 Part1
-
-                        </li>
-                      </ul>
-                    </li>
-                    <li class=""><span>教材版本教材</span>
-                      <ul class="three ">
-                        <li class="active">小学Unit 3-1 Part1
-
-                        </li>
-                        <li>小学Unit 3-2 Part1
-
-                        </li>
-                      </ul>
-                    </li>
-                    <li class=""><span>教材版本教材</span>
-                      <ul class="three ">
-                        <li class="active">小学Unit 4-1 Part1
-
-                        </li>
-                        <li>小学Unit 4-2 Part1
-
-                        </li>
-                      </ul>
-                    </li>
-                  </ul>
-                </li>
-                <li class="one"><span class="text">小学英语</span>
-                  <ul class="two">
-                    <li class="active"><span>教材版本教材</span>
-                      <ul class="three ">
-                        <li class="active"><span>第一册（一年级上学期）</span>
-
-                        </li>
-                        <li><span>第二册（一年级下学期）</span>
-
-
-                        </li>
-                        <li><span>第二册（一年级下学期）</span>
-
-                        </li>
-                        <li><span>第二册（一年级下学期）</span>
-
-                        </li>
-                      </ul>
-                    </li>
-                    <li><span>教材版本教材</span>
-                      <ul class="three ">
-                        <li class="active">小学Unit 2-1 Part1
-
-                        </li>
-                        <li>小学Unit 2-2 Part1
-
-                        </li>
-                      </ul>
-                    </li>
-                    <li class=""><span>教材版本教材</span>
-                      <ul class="three ">
-                        <li class="active">小学Unit 3-1 Part1
-
-                        </li>
-                        <li>小学Unit 3-2 Part1
-
-                        </li>
-                      </ul>
-                    </li>
-                    <li class=""><span>教材版本教材</span>
-                      <ul class="three ">
-                        <li class="active">小学Unit 4-1 Part1
-
-                        </li>
-                        <li>小学Unit 4-2 Part1
-
-                        </li>
-                      </ul>
-                    </li>
-                  </ul>
-                </li>
-                <li class="one"><span class="text">初中语法</span>
-                  <ul class="two">
-                    <li class="active"><span>教材版本教材</span>
-                      <ul class="three ">
-                        <li class="active"><span>第一册（一年级上学期）</span>
-
-                  
-                        </li>
-                        <li><span>第二册（一年级下学期）</span>
-
-
-                        </li>
-                        <li><span>第二册（一年级下学期）</span>
-
-                        </li>
-                        <li><span>第二册（一年级下学期）</span>
-
-                        </li>
-                      </ul>
-                    </li>
-                    <li><span>教材版本教材</span>
-                      <ul class="three ">
-                        <li class="active">小学Unit 2-1 Part1
-
-                        </li>
-                        <li>小学Unit 2-2 Part1
-
-                        </li>
-                      </ul>
-                    </li>
-                    <li class=""><span>教材版本教材</span>
-                      <ul class="three ">
-                        <li class="active">小学Unit 3-1 Part1
-
-                        </li>
-                        <li>小学Unit 3-2 Part1
-
-                        </li>
-                      </ul>
-                    </li>
-                    <li class=""><span>教材版本教材</span>
-                      <ul class="three ">
-                        <li class="active">小学Unit 4-1 Part1
-
-                        </li>
-                        <li>小学Unit 4-2 Part1
-
-                        </li>
-                      </ul>
-                    </li>
-                  </ul>
-                </li>
-                <li class="one"><span class="text">高中语法</span>
-                  <ul class="two">
-                    <li class="active"><span>教材版本教材</span>
-                      <ul class="three ">
-                        <li class="active"><span>第一册（一年级上学期）</span>
-
-                         
-                        </li>
-                        <li><span class="">第二册（一年级下学期）</span>
-
-
-                        </li>
-                        <li><span class="">第二册（一年级下学期）</span>
-
-                        </li>
-                        <li><span class="">第二册（一年级下学期）</span>
-
-                        </li>
-                      </ul>
-                    </li>
-                    <li><span class="">教材版本教材</span>
-                      <ul class="three ">
-                        <li class="active">小学Unit 2-1 Part1
-
-                        </li>
-                        <li>小学Unit 2-2 Part1
-
-                        </li>
-                      </ul>
-                    </li>
-                    <li class=""><span>教材版本教材</span>
-                      <ul class="three ">
-                        <li class="active">小学Unit 3-1 Part1
-
-                        </li>
-                        <li>小学Unit 3-2 Part1
-
-                        </li>
-                      </ul>
-                    </li>
-                    <li class=""><span>教材版本教材</span>
-                      <ul class="three ">
-                        <li class="active">小学Unit 4-1 Part1
-
-                        </li>
-                        <li>小学Unit 4-2 Part1
-
-                        </li>
-                      </ul>
-                    </li>
-                  </ul>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-primary" style="margin-bottom: 5px" data-dismiss="modal">确认添加</button>
+          <button type="button" class="btn btn-primary" data-dismiss="modal" style="margin-bottom: 5px">添加</button>
         </div>
       </div>
     </div>
