--- a/src/html/coursemanagement_task.html
+++ b/src/html/coursemanagement_task.html
@@ -41,6 +41,7 @@
 
 
 
+
   <link rel="stylesheet" href="../css/wj_teacher.css">
 
 
@@ -87,6 +88,7 @@
       </nav>
     </header>
     <!-- endbuild -->
+
 
 
 
@@ -416,9 +418,10 @@
 
 
 
+
     <!-- 主要内容 -->
     <section>
-      <div class="content-wrapper">
+      <div class="content-wrapper publicWidth">
         <div class="content-heading">
           学习任务
           <div class='mt10 xc-clearfix'>
@@ -700,6 +703,7 @@
 
 
 
+
                   </div>
                 </div>
             </div>
@@ -714,6 +718,7 @@
       <span>&copy; 2018 - 智厢逢</span>
     </footer>
     <!-- endbuild -->
+
 
 
 
@@ -760,6 +765,7 @@
   <script src="../js/vendor/eonasdan-bootstrap-datetimepicker/build/js/locales/bootstrap-datetimepicker.zh-CN.js"></script>
   <script src="../js/app.js"></script>
   <!-- endbuild -->
+
 
 
 
