--- a/src/html/coursemanagement_classtbkc.html
+++ b/src/html/coursemanagement_classtbkc.html
@@ -644,10 +644,11 @@
             </div>
           </div>
         </div>
+        <div class="row text-center mt10">
+            <button type="button" class="btn btn-primary jq-addclass">确认添加</button>
+          </div>
       </div>
-      <div class="row text-center">
-        <button type="button" class="btn btn-primary jq-addclass">确认添加</button>
-      </div>
+      
     </section>
     <!-- 主要内容END -->
     
