--- a/src/html/coursemanagement_classtztcc.html
+++ b/src/html/coursemanagement_classtztcc.html
@@ -644,9 +644,9 @@
             </div>
           </div>
         </div>
-      </div>
-      <div class="row text-center">
-        <button type="button" class="btn btn-primary jq-addclass">确认添加</button>
+        <div class="row text-center mt10">
+            <button type="button" class="btn btn-primary jq-addclass">确认添加</button>
+          </div>
       </div>
     </section>
     <!-- 主要内容END -->
