--- a/src/html/coursemanagement_classtbkc.html
+++ b/src/html/coursemanagement_classtbkc.html
@@ -40,6 +40,7 @@
 
 
 
+
   <link rel="stylesheet" href="../css/wj_teacher.css">
 
 
@@ -86,6 +87,7 @@
       </nav>
     </header>
     <!-- endbuild -->
+
 
 
 
@@ -413,6 +415,7 @@
 
 
 
+
     <!-- 主要内容 -->
     <section>
       <div class="content-wrapper coursemanagement-wp">
@@ -433,7 +436,7 @@
                 </ul>
               </div>
               <div class="xc-table-body wj-table sg">
-                <ul class="jq-xc-table" style="height: 232px;">
+                <ul class="jq-xc-table">
                   <li class="one active" data-id="3434"><span class="text">小学英语</span> 
                     <ul class="two">
                       <li class="active"><span>教材版本教材版本教材版本教材版本教材版本</span>
@@ -685,6 +688,7 @@
 
 
 
+
   </div>
 
   <!-- build:js -->
@@ -702,6 +706,7 @@
   <script src="../js/vendor/eonasdan-bootstrap-datetimepicker/build/js/locales/bootstrap-datetimepicker.zh-CN.js"></script>
   <script src="../js/app.js"></script>
   <!-- endbuild -->
+
 
 
 
