--- a/src/html/coursemanagement_taskaddtbzc.html
+++ b/src/html/coursemanagement_taskaddtbzc.html
@@ -437,7 +437,7 @@
                 </ul>
               </div>
               <div class="xc-table-body wj-table sg">
-                <ul class="jq-xc-table" style="height: 232px;">
+                <ul class="jq-xc-table">
                   <li class="one active"><span class="text">小学英语</span> 
                     <ul class="two">
                       <li class="active"><span>教材版本教材版本教材版本教材版本教材版本</span>
