--- a/src/html/coursemanagement_taskaddztcc.html
+++ b/src/html/coursemanagement_taskaddztcc.html
@@ -436,7 +436,7 @@
                 </ul>
               </div>
               <div class="xc-table-body wj-table sg">
-                <ul class="jq-xc-table" style="height: 232px;">
+                <ul class="jq-xc-table">
                   <li class="one active"><span class="text">小学英语</span> 
                     <ul class="two">
                       <li class="active"><span>小升初冲刺</span>
@@ -588,7 +588,7 @@
             <div class="form-group">
               <label class="col-lg-1 control-label" style="min-width: 100px;">选择模块</label>
               <div class="col-lg-10">
-                <div class="table-responsive" style="max-height: 290px">
+                <div class="table-responsive">
                   <table class="table maxcheckboxtable table-bordered table-hover dataTable">
                     <thead>
                       <tr>
