--- a/src/html/coursemanagement_taskaddgdyf.html
+++ b/src/html/coursemanagement_taskaddgdyf.html
@@ -436,7 +436,7 @@
                 </ul>
               </div>
               <div class="xc-table-body wj-table sg">
-                <ul class="jq-xc-table" style="height: 232px;">
+                <ul class="jq-xc-table">
                   <li class="one active"><span class="text">小学英语</span> 
                     <ul class="two">
                       <li class="active"><span>代词数词定语从句</span>
