--- a/src/html/schoolmanagement_list.html
+++ b/src/html/schoolmanagement_list.html
@@ -435,7 +435,7 @@
 
     <!-- 主要内容 -->
     <section>
-      <div class="content-wrapper">
+      <div class="content-wrapper publicWidth">
         <div class="content-heading">
           学校列表
           <div class='mt10 xc-clearfix'>
@@ -453,13 +453,13 @@
                 <form class="form-horizontal">
                   <div class="form-group">
                     <label class="col-lg-1 control-label">选择省份</label>
-                    <div class="col-lg-4">
+                    <div class="col-lg-1">
                       <select id="provinceSelect" name="account" class="form-control m-b" placeholder='请选择省份'>
                         <option>请选择省份</option>
                       </select>
                     </div>
                     <label class="col-lg-1 control-label">检索学校</label>
-                    <div class="col-lg-4">
+                    <div class="col-lg-1">
                       <input type="text" placeholder="请输入学校编号或学校名" class="form-control">
                     </div>
                     <div class="col-lg-2">
