--- a/src/html/studentmanagement_class.html
+++ b/src/html/studentmanagement_class.html
@@ -439,6 +439,8 @@
                       <tr>
                         <th>创建时间</th>
                         <th>班级名称</th>
+                        <th>所属学校</th>
+                        <th>所属教师</th>
                         <th>学生人数</th>
                         <th>操作</th>
                       </tr>
@@ -447,6 +449,8 @@
                       <tr>
                         <td>2018-01-01 22:22:22</td>
                         <td>未分班</td>
+                        <td>学校</td>
+                        <td>教师</td>
                         <td>10</td>
                         <td>
                           <a class="btn btn-primary jq-createclass" href="javascript:;">编辑班级</a>
@@ -456,6 +460,8 @@
                       <tr>
                         <td>2018-01-01 22:22:22</td>
                         <td>过期学员</td>
+                        <td>学校</td>
+                        <td>教师</td>
                         <td>10</td>
                         <td>
                           <a class="btn btn-primary jq-createclass" href="javascript:;">编辑班级</a>
@@ -465,6 +471,8 @@
                       <tr>
                         <td>2018-01-01 22:22:22</td>
                         <td>班级名称班级名称</td>
+                        <td>学校</td>
+                        <td>教师</td>
                         <td>10</td>
                         <td>
                           <a class="btn btn-primary jq-createclass" href="javascript:;">编辑班级</a>
