--- a/src/html/intelligent_real_mistalk.html
+++ b/src/html/intelligent_real_mistalk.html
@@ -456,48 +456,6 @@
                         <input type="text" placeholder="请输入句子" class="form-control">
                       </div>
                     </div>
-                    <div class="form-group">
-                      <label class="col-lg-1 control-label">04：</label>
-                      <div class="col-lg-11">
-                        <input type="text" placeholder="请输入句子" class="form-control">
-                      </div>
-                    </div>
-                    <div class="form-group">
-                      <label class="col-lg-1 control-label">05：</label>
-                      <div class="col-lg-11">
-                        <input type="text" placeholder="请输入句子" class="form-control">
-                      </div>
-                    </div>
-                    <div class="form-group">
-                      <label class="col-lg-1 control-label">06：</label>
-                      <div class="col-lg-11">
-                        <input type="text" placeholder="请输入句子" class="form-control">
-                      </div>
-                    </div>
-                    <div class="form-group">
-                      <label class="col-lg-1 control-label">07：</label>
-                      <div class="col-lg-11">
-                        <input type="text" placeholder="请输入句子" class="form-control">
-                      </div>
-                    </div>
-                    <div class="form-group">
-                      <label class="col-lg-1 control-label">08：</label>
-                      <div class="col-lg-11">
-                        <input type="text" placeholder="请输入句子" class="form-control">
-                      </div>
-                    </div>
-                    <div class="form-group">
-                      <label class="col-lg-1 control-label">09：</label>
-                      <div class="col-lg-11">
-                        <input type="text" placeholder="请输入句子" class="form-control">
-                      </div>
-                    </div>
-                    <div class="form-group">
-                      <label class="col-lg-1 control-label">10：</label>
-                      <div class="col-lg-11">
-                        <input type="text" placeholder="请输入句子" class="form-control">
-                      </div>
-                    </div>
                     <button class="btn jq-add-jz"> + 添加句子</button>
                   </div>
 
@@ -515,7 +473,7 @@
                         </select>
                       </div>
                       <div class="col-lg-2">
-                        <select name="account" class="form-control m-b">
+                        <select name="account" class="form-control m-b jq-tm-change">
                           <option>修改</option>
                           <option>增加</option>
                           <option>删除</option>
@@ -533,7 +491,7 @@
                     <div class="form-group">
                       <label class="col-lg-1 control-label">01：</label>
                       <div class="col-lg-2">
-                        <select name="account" class="form-control m-b">
+                        <select name="account" class="form-control m-b ">
                           <option value="">请选择句子</option>
                           <option>01</option>
                           <option>02</option>
@@ -542,7 +500,7 @@
                         </select>
                       </div>
                       <div class="col-lg-2">
-                        <select name="account" class="form-control m-b">
+                        <select name="account" class="form-control m-b jq-tm-change">
                           <option>修改</option>
                           <option selected>增加</option>
                           <option>删除</option>
@@ -569,7 +527,7 @@
                         </select>
                       </div>
                       <div class="col-lg-2">
-                        <select name="account" class="form-control m-b">
+                        <select name="account" class="form-control m-b jq-tm-change">
                           <option>修改</option>
                           <option>增加</option>
                           <option selected>删除</option>
@@ -584,6 +542,7 @@
                         <input type="text" placeholder="请输入" class="form-control">
                       </div>
                     </div>
+                    <button class="btn jq-add-tm"> + 添加题目</button>
                   </div>
                 </form>
               </div>
