--- a/src/html/33_intelText_8.html
+++ b/src/html/33_intelText_8.html
@@ -73,6 +73,7 @@
 
 
 
+
   <div class="wrap ml">
     <div class="main readText-main">
       <div class="xc-container">
@@ -132,15 +133,36 @@
                 <div class="xc-readCom-answer-item">
                   <label for="">
                     <p>1. Today is a sunny day.</p>
-                    <input class="answer-item-input" type="text" name="text1" placeholder="请输入">
+                    <div class="xc-head-select">
+                      <div class="name" value="1">T</div>
+                      <ul class="xc-head-select-ul">
+                        <li value="1" class="active">T</li>
+                        <li value="2">F</li>
+                      </ul>
+                      <img src="../img/word-select.png" alt="下拉" class="xc-head-selectImg">
+                    </div>
                   </label>
                   <label for="">
                     <p>2. Today is a sunny day.</p>
-                    <input class="answer-item-input" type="text" name="text1" placeholder="请输入">
+                    <div class="xc-head-select">
+                      <div class="name" value="1">T</div>
+                      <ul class="xc-head-select-ul">
+                        <li value="1" class="active">T</li>
+                        <li value="2">F</li>
+                      </ul>
+                      <img src="../img/word-select.png" alt="下拉" class="xc-head-selectImg">
+                    </div>
                   </label>
                   <label for="">
                     <p>3. Today is a sunny day.</p>
-                    <input class="answer-item-input" type="text" name="text1" placeholder="请输入">
+                    <div class="xc-head-select">
+                      <div class="name" value="1">T</div>
+                      <ul class="xc-head-select-ul">
+                        <li value="1" class="active">T</li>
+                        <li value="2">F</li>
+                      </ul>
+                      <img src="../img/word-select.png" alt="下拉" class="xc-head-selectImg">
+                    </div>
                   </label>
                 </div>
               </div>
