--- a/src/html/36_realText_c.html
+++ b/src/html/36_realText_c.html
@@ -108,9 +108,9 @@
           </div>
           <div class="intelText-classNum-box">
             <ul class="intelText-classNum">
-              <li class="intelText-classNum-items active">A</li>
+              <li class="intelText-classNum-items"><a href="./36_realText.html">A</a></li>
               <li class="intelText-classNum-items"><a href="./36_realText_b.html">B</a></li>
-              <li class="intelText-classNum-items"><a href="./36_realText_c.html">C</a></li>
+              <li class="intelText-classNum-items active">C</li>
               <li class="intelText-classNum-items"><a href="./36_realText_d.html">D</a></li>
               <li class="intelText-classNum-items"><a href="./37_realText.html">E</a></li>
             </ul>
