--- a/src/html/37_realText.html
+++ b/src/html/37_realText.html
@@ -73,6 +73,7 @@
 
 
 
+
   <div class="wrap ml">
     <div class="main readText-main">
       <div class="xc-container">
@@ -107,10 +108,10 @@
           </div>
           <div class="intelText-classNum-box">
             <ul class="intelText-classNum">
-              <li class="intelText-classNum-items">A</li>
-              <li class="intelText-classNum-items">B</li>
-              <li class="intelText-classNum-items">C</li>
-              <li class="intelText-classNum-items">D</li>
+              <li class="intelText-classNum-items"><a href="./36_realText_a.html">A</a></li>
+              <li class="intelText-classNum-items"><a href="./36_realText_b.html">B</a></li>
+              <li class="intelText-classNum-items"><a href="./36_realText_c.html">C</a></li>
+              <li class="intelText-classNum-items"><a href="./36_realText_d.html">D</a></li>
               <li class="intelText-classNum-items active">E</li>
             </ul>
           </div>
