--- a/src/html/40_realText_error.html
+++ b/src/html/40_realText_error.html
@@ -73,6 +73,7 @@
 
 
 
+
   <div class="wrap ml">
     <div class="main readText-main">
       <div class="xc-container">
@@ -148,7 +149,7 @@
                     <div class="answer-chang-box">
                       在
                       <input type="text" class="answer-chang-input" value="luck" disabled/>
-                      <span class="answer-chang-span">后赠</span>
+                      <span class="answer-chang-span">后增</span>
                       <input type="text" class="answer-chang-input" value="ing" disabled/>
                     </div>
                     <p class="answer-chang-des">
@@ -173,7 +174,7 @@
                     <div class="answer-chang-box">
                       在
                       <input type="text" class="answer-chang-input" value="luck" disabled/>
-                      <span class="answer-chang-span">后赠</span>
+                      <span class="answer-chang-span">添加</span>
                       <input type="text" class="answer-chang-input" value="ing" disabled/>
                     </div>
                     <p class="answer-chang-des">
@@ -198,7 +199,7 @@
                     <div class="answer-chang-box">
                       在
                       <input type="text" class="answer-chang-input" value="luck" disabled/>
-                      <span class="answer-chang-span">后赠</span>
+                      <span class="answer-chang-span">后增</span>
                       <input type="text" class="answer-chang-input" value="ing" disabled/>
                     </div>
                     <p class="answer-chang-des">
