--- a/src/html/37_realText.html
+++ b/src/html/37_realText.html
@@ -108,7 +108,7 @@
           </div>
           <div class="intelText-classNum-box">
             <ul class="intelText-classNum">
-              <li class="intelText-classNum-items"><a href="./36_realText_a.html">A</a></li>
+              <li class="intelText-classNum-items"><a href="./36_realText.html">A</a></li>
               <li class="intelText-classNum-items"><a href="./36_realText_b.html">B</a></li>
               <li class="intelText-classNum-items"><a href="./36_realText_c.html">C</a></li>
               <li class="intelText-classNum-items"><a href="./36_realText_d.html">D</a></li>
