--- a/src/html/38_realText_b.html
+++ b/src/html/38_realText_b.html
@@ -108,8 +108,8 @@
           </div>
           <div class="intelText-classNum-box">
             <ul class="intelText-classNum">
-              <li class="intelText-classNum-items active">1~5</li>
-              <li class="intelText-classNum-items"><a href="./38_realText_b.html">6~10</a></li>
+              <li class="intelText-classNum-items"><a href="./38_realText.html">1~5</a></li>
+              <li class="intelText-classNum-items active">6~10</li>
               <li class="intelText-classNum-items"><a href="./38_realText_c.html">11~15</a></li>
               <li class="intelText-classNum-items"><a href="./38_realText_d.html">16~20</a></li>
             </ul>
