--- a/src/html/38_realText_error.html
+++ b/src/html/38_realText_error.html
@@ -5,7 +5,7 @@
   <meta content="webkit" name="renderer" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta charset="UTF-8">
-  <title>真题冲刺-阅读理解</title>
+  <title>真题冲刺-完形填空</title>
   <meta name="Keywords" content="">
   <meta name="Description" content="">
   <meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
@@ -84,7 +84,7 @@
         </div>
         <div class="intelText-box">
           <div class="intelText-head">
-            <p class="intelText-head-name">高考冲刺-真题模拟卷十二</p>
+            <p class="intelText-head-name">高考冲刺-真题模拟卷十二 <span class="score">客观题得分：<span class="score-num">100</span></p>
             <div class="intelText-close">
               <img src="../img/intelText-close.png" alt="关闭">
             </div>
@@ -99,8 +99,9 @@
               <li class="intelText-class">写作</li>
               <span class="intelText-line"></span>
             </ul>
-            <div class="intelText-classes-des">词汇与语法总分：
-              <span>15</span>分
+            <div class="intelText-classes-des">
+              <span class="xc-blue">完形填空总分：30分，得分</span>
+              <span class="xc-red">20</span>
               <p class="intelText-classes-score">
                 <span class="intelText-classes-score-num">40</span>/60
               </p>
@@ -251,24 +252,6 @@
           </div>
         </div>
       </div>
-    </div>
-  </div>
-  <div class="intelText-footer">
-    <div class="xc-container">
-      <p class="intelText-footer-item">
-        <img class="intelText-footer-timeImg" src="../img/intelText-footer-time.png" alt="tiem">倒计时
-        <span class="intelText-footer-time">01:28</span>测试时间：120分钟</p>
-      <ul class="intelText-footer-btns">
-        <li class="intelText-footer-btn">
-          <a class="intelText-footer-link" href="javascript:;">上一题</a>
-        </li>
-        <li class="intelText-footer-btn">
-          <a class="intelText-footer-link" href="javascript:;">下一题</a>
-        </li>
-        <li class="intelText-footer-btn active">
-          <a class="intelText-footer-link" href="javascript:;">提交试卷</a>
-        </li>
-      </ul>
     </div>
   </div>
   <!-- 底部 -->
