--- a/src/html/36_realText.html
+++ b/src/html/36_realText.html
@@ -229,7 +229,7 @@
     <div class="xc-container">
       <p class="intelText-footer-item">
         <img class="intelText-footer-timeImg" src="../img/intelText-footer-time.png" alt="tiem">倒计时
-        <span class="intelText-footer-time">01:28</span>测试时间：120分钟</p>
+        <span class="intelText-footer-time xc-time">01:28</span>测试时间：120分钟</p>
       <ul class="intelText-footer-btns">
         <li class="intelText-footer-btn">
           <a class="intelText-footer-link" href="javascript:;">上一题</a>
@@ -246,6 +246,13 @@
   <!-- 底部 -->
   <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
   <script src="../js/main_xc.js"></script>
+  <script>
+    $(function() {
+      comment.endTime($('.xc-time'), 88, function() {
+        console.log('倒计时结束')
+      })
+    })
+  </script>
 </body>
 
 </html>
