--- a/src/html/32_synchro_test.html
+++ b/src/html/32_synchro_test.html
@@ -534,6 +534,17 @@
       </div>
     </div>
   </div>
+  <div class="bomb-wp">
+    <div class="bomb-ct">
+      <i class="delete-icon"></i>
+      <p class="bomb-title">选择阶段</p>
+      <div class="link-wp">
+        <a href="javascript:;"></a>
+        <a href="javascript:;"></a>
+        <a href="javascript:;"></a>
+      </div>
+    </div>
+  </div>
   <!-- build:foot -->
   <!-- 底部 -->
   <div class="footer">
@@ -559,6 +570,7 @@
 
 
   <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
+  <script src="../js/main_wj.js"></script>
   <script src="../js/main_xc.js"></script>
 </body>
 
