--- a/src/html/34_senior_exam.html
+++ b/src/html/34_senior_exam.html
@@ -84,8 +84,8 @@
       </p>
       <div class="synchrotest-box clearfix">
         <span class="unit">真题测试-中考冲刺</span>
-        <a href="javascript:;" class="changecourse">
-          <i class="change-icon"></i>更换</a>
+        <a href="javascript:;" class="changecourse course-head-classes">
+          <i class="change-icon"></i>更换课程</a>
         <a href="javascript:;" class="return-coursecenter">返回课程中心</a>
       </div>
       <div class="synchrotest-wp">
@@ -134,6 +134,422 @@
         </ul>
       </div>
     </div>
+    <div class="course_center_wrap xc_center_wrap">
+      <div class="course_center xc_center">
+        <div class="change_course_nav clearfix">
+          <a class="change_course_nav_list active">我的课程</a>
+          <a class="change_course_nav_list">全部课程</a>
+          <span class="close"></span>
+        </div>
+        <div class="change_course_details">
+          <div class="change_course_details-list active">
+            <table class="change_course_details_table active">
+              <tr>
+                <th>课程名称</th>
+                <th>上次学习日期</th>
+                <th>继续学习</th>
+              </tr>
+              <tr>
+                <td>课程名称</td>
+                <td>一天前</td>
+                <td>
+                  <p class="course_list_details_button">
+                    <span>学习</span>
+                  </p>
+                </td>
+              </tr>
+              <tr>
+                <td>课程名称</td>
+                <td>一天前</td>
+                <td>
+                  <p class="course_list_details_button">
+                    <span>学习</span>
+                  </p>
+                </td>
+              </tr>
+              <tr>
+                <td>课程名称</td>
+                <td>一天前</td>
+                <td>
+                  <p class="course_list_details_button">
+                    <span>学习</span>
+                  </p>
+                </td>
+              </tr>
+              <tr>
+                <td>课程名称</td>
+                <td>一天前</td>
+                <td>
+                  <p class="course_list_details_button">
+                    <span>学习</span>
+                  </p>
+                </td>
+              </tr>
+              <tr>
+                <td>课程名称</td>
+                <td>一天前</td>
+                <td>
+                  <p class="course_list_details_button">
+                    <span>学习</span>
+                  </p>
+                </td>
+              </tr>
+              <tr>
+                <td>课程名称</td>
+                <td>一天前</td>
+                <td>
+                  <p class="course_list_details_button">
+                    <span>学习</span>
+                  </p>
+                </td>
+              </tr>
+              <tr>
+                <td>课程名称</td>
+                <td>一天前</td>
+                <td>
+                  <p class="course_list_details_button">
+                    <span>学习</span>
+                  </p>
+                </td>
+              </tr>
+              <tr>
+                <td>课程名称</td>
+                <td>一天前</td>
+                <td>
+                  <p class="course_list_details_button">
+                    <span>学习</span>
+                  </p>
+                </td>
+              </tr>
+            </table>
+          </div>
+          <div class="change_course_details-list " style="padding: 10px 30px;">
+            <div class="xc-new-table samll">
+              <div class="xc-table-head">
+                <ul>
+                  <li class="col-xs-3">课程阶段</li>
+                  <li class="col-xs-3">选择版本</li>
+                  <li class="col-xs-3">课本</li>
+                  <li class="col-xs-3">单元</li>
+                </ul>
+              </div>
+              <div class="xc-table-body">
+                <ul class="jq-xc-table grammar">
+                  <li class="one active">启蒙课程
+                    <ul class="two">
+                      <li class="active">一教材
+                        <ul class="three big">
+                          <li class="active">小学Unit 1-1 Part1
+                            <ul class="four">
+                              <li class="active">单元-1</li>
+                              <li class="">单元-2</li>
+                            </ul>
+                          </li>
+                          <li>小学Unit 1-2 Part1
+                            <ul class="four">
+                              <li class="active">单元-1</li>
+                              <li class="">单元-2</li>
+                            </ul>
+                          </li>
+                          <li>小学Unit 1-2 Part1
+                            <ul class="four">
+                              <li class="active">单元-1</li>
+                              <li class="">单元-2</li>
+                            </ul>
+                          </li>
+                          <li>小学Unit 1-2 Part1
+                            <ul class="four">
+                              <li class="active">单元-1</li>
+                              <li class="">单元-2</li>
+                            </ul>
+                          </li>
+                          <li>小学Unit 1-2 Part1
+                            <ul class="four">
+                              <li class="active">单元-1</li>
+                              <li class="">单元-2</li>
+                            </ul>
+                          </li>
+                          <li>小学Unit 1-2 Part1
+                            <ul class="four">
+                              <li class="active">单元-1</li>
+                              <li class="">单元-2</li>
+                            </ul>
+                          </li>
+                          <li>小学Unit 1-2 Part1
+                            <ul class="four">
+                              <li class="active">单元-1</li>
+                              <li class="">单元-2</li>
+                            </ul>
+                          </li>
+                          <li>小学Unit 1-2 Part1
+                            <ul class="four">
+                              <li class="active">单元-1</li>
+                              <li class="">单元-2</li>
+                            </ul>
+                          </li>
+                        </ul>
+                      </li>
+                      <li>一教材
+                        <ul class="three big">
+                          <li class="active">小学Unit 2-1 Part1
+                            <ul class="four">
+                              <li class="active">单元-1</li>
+                              <li class="">单元-2</li>
+                            </ul>
+                          </li>
+                          <li>小学Unit 2-2 Part1
+                            <ul class="four">
+                              <li class="active">单元-1</li>
+                              <li class="">单元-2</li>
+                            </ul>
+                          </li>
+                        </ul>
+                      </li>
+                      <li class="">一教材
+                        <ul class="three big">
+                          <li class="active">小学Unit 3-1 Part1
+                            <ul class="four">
+                              <li class="active">单元-1</li>
+                              <li class="">单元-2</li>
+                            </ul>
+                          </li>
+                          <li>小学Unit 3-2 Part1
+                            <ul class="four">
+                              <li class="active">单元-1</li>
+                              <li class="">单元-2</li>
+                            </ul>
+                          </li>
+                        </ul>
+                      </li>
+                      <li class="">一教材
+                        <ul class="three big">
+                          <li class="active">小学Unit 4-1 Part1
+                            <ul class="four">
+                              <li class="active">单元-1</li>
+                              <li class="">单元-2</li>
+                            </ul>
+                          </li>
+                          <li>小学Unit 4-2 Part1
+                            <ul class="four">
+                              <li class="active">单元-1</li>
+                              <li class="">单元-2</li>
+                            </ul>
+                          </li>
+                        </ul>
+                      </li>
+                    </ul>
+                  </li>
+                  <li class="one">小学课程
+                    <ul class="two">
+                      <li class="active">二教材
+                        <ul class="three big">
+                          <li class="active">初中Unit 1-1 Part1
+                            <ul class="four">
+                              <li class="active">单元-1</li>
+                              <li class="">单元-2</li>
+                            </ul>
+                          </li>
+                          <li>初中Unit 1-2 Part1
+                            <ul class="four">
+                              <li class="active">单元-1</li>
+                              <li class="">单元-2</li>
+                            </ul>
+                          </li>
+                        </ul>
+                      </li>
+                      <li>二教材
+                        <ul class="three big">
+                          <li class="active">初中Unit 2-1 Part1
+                            <ul class="four">
+                              <li class="active">单元-1</li>
+                              <li class="">单元-2</li>
+                            </ul>
+                          </li>
+                          <li>初中Unit 2-2 Part1
+                            <ul class="four">
+                              <li class="active">单元-1</li>
+                              <li class="">单元-2</li>
+                            </ul>
+                          </li>
+                        </ul>
+                      </li>
+                      <li>二教材
+                        <ul class="three big">
+                          <li class="active">初中Unit 3-1 Part1
+                            <ul class="four">
+                              <li class="active">单元-1</li>
+                              <li class="">单元-2</li>
+                            </ul>
+                          </li>
+                          <li>初中Unit 3-2 Part1
+                            <ul class="four">
+                              <li class="active">单元-1</li>
+                              <li class="">单元-2</li>
+                            </ul>
+                          </li>
+                        </ul>
+                      </li>
+                      <li>二教材
+                        <ul class="three big">
+                          <li class="active">初中Unit 4-1 Part1
+                            <ul class="four">
+                              <li class="active">单元-1</li>
+                              <li class="">单元-2</li>
+                            </ul>
+                          </li>
+                          <li>初中Unit 4-2 Part1
+                            <ul class="four">
+                              <li class="active">单元-1</li>
+                              <li class="">单元-2</li>
+                            </ul>
+                          </li>
+                        </ul>
+                      </li>
+                    </ul>
+                  </li>
+                  <li class="one">初中课程
+                    <ul class="two">
+                      <li class="active">三教材
+                        <ul class="three big">
+                          <li class="active">高中Unit 1-1 Part1
+                            <ul class="four">
+                              <li class="active">单元-1</li>
+                              <li class="">单元-2</li>
+                            </ul>
+                          </li>
+                          <li>高中Unit 1-2 Part1
+                            <ul class="four">
+                              <li class="active">单元-1</li>
+                              <li class="">单元-2</li>
+                            </ul>
+                          </li>
+                        </ul>
+                      </li>
+                      <li>三教材
+                        <ul class="three big">
+                          <li class="active">高中Unit 2-1 Part1
+                            <ul class="four">
+                              <li class="active">单元-1</li>
+                              <li class="">单元-2</li>
+                            </ul>
+                          </li>
+                          <li>高中Unit 2-2 Part1
+                            <ul class="four">
+                              <li class="active">单元-1</li>
+                              <li class="">单元-2</li>
+                            </ul>
+                          </li>
+                        </ul>
+                      </li>
+                      <li>三教材
+                        <ul class="three big">
+                          <li class="active">高中Unit 3-1 Part1
+                            <ul class="four">
+                              <li class="active">单元-1</li>
+                              <li class="">单元-2</li>
+                            </ul>
+                          </li>
+                          <li>高中Unit 3-2 Part1
+                            <ul class="four">
+                              <li class="active">单元-1</li>
+                              <li class="">单元-2</li>
+                            </ul>
+                          </li>
+                        </ul>
+                      </li>
+                      <li>三教材
+                        <ul class="three big">
+                          <li class="active">高中Unit 4-1 Part1
+                            <ul class="four">
+                              <li class="active">单元-1</li>
+                              <li class="">单元-2</li>
+                            </ul>
+                          </li>
+                          <li>高中Unit 4-2 Part1
+                            <ul class="four">
+                              <li class="active">单元-1</li>
+                              <li class="">单元-2</li>
+                            </ul>
+                          </li>
+                        </ul>
+                      </li>
+                    </ul>
+                  </li>
+                  <li class="one">高中课程
+                    <ul class="two">
+                      <li class="active">三教材
+                        <ul class="three big">
+                          <li class="active">高中Unit 1-1 Part1
+                            <ul class="four">
+                              <li class="active">单元-1</li>
+                              <li class="">单元-2</li>
+                            </ul>
+                          </li>
+                          <li>高中Unit 1-2 Part1
+                            <ul class="four">
+                              <li class="active">单元-1</li>
+                              <li class="">单元-2</li>
+                            </ul>
+                          </li>
+                        </ul>
+                      </li>
+                      <li>三教材
+                        <ul class="three big">
+                          <li class="active">高中Unit 2-1 Part1
+                            <ul class="four">
+                              <li class="active">单元-1</li>
+                              <li class="">单元-2</li>
+                            </ul>
+                          </li>
+                          <li>高中Unit 2-2 Part1
+                            <ul class="four">
+                              <li class="active">单元-1</li>
+                              <li class="">单元-2</li>
+                            </ul>
+                          </li>
+                        </ul>
+                      </li>
+                      <li>三教材
+                        <ul class="three big">
+                          <li class="active">高中Unit 3-1 Part1
+                            <ul class="four">
+                              <li class="active">单元-1</li>
+                              <li class="">单元-2</li>
+                            </ul>
+                          </li>
+                          <li>高中Unit 3-2 Part1
+                            <ul class="four">
+                              <li class="active">单元-1</li>
+                              <li class="">单元-2</li>
+                            </ul>
+                          </li>
+                        </ul>
+                      </li>
+                      <li>三教材
+                        <ul class="three big">
+                          <li class="active">高中Unit 4-1 Part1
+                            <ul class="four">
+                              <li class="active">单元-1</li>
+                              <li class="">单元-2</li>
+                            </ul>
+                          </li>
+                          <li>高中Unit 4-2 Part1
+                            <ul class="four">
+                              <li class="active">单元-1</li>
+                              <li class="">单元-2</li>
+                            </ul>
+                          </li>
+                        </ul>
+                      </li>
+                    </ul>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
   <!-- 弹框 -->
   <div class="bomb-wp">
@@ -173,6 +589,7 @@
 
   <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
   <script src="../js/main_wj.js"></script>
+  <script src="../js/main_xc.js"></script>
 </body>
 
 </html>
