--- a/src/html/07_personal_data.html
+++ b/src/html/07_personal_data.html
@@ -126,7 +126,7 @@
             <form id="form" action="" method="post" data-parsley-validate>
               <div class="change-detail-item">
                 <div class="change-detail-name">真实姓名：</div>
-                <input type="text" placeholder="请输入真实姓名">
+                <input type="text" placeholder="请输入真实姓名" required data-parsley-required-message="姓名不能为空">
               </div>
               <div class="change-detail-item">
                 <div class="change-detail-name">性别：</div>
@@ -181,7 +181,7 @@
               </div>
               <div class="btn-list">
                 <button class="back-btn">取消</button>
-                <button class="save-btn">保存</button>
+                <button type="submit" class="save-btn">保存</button>
               </div>
             </form>
           </div>
